[gd_scene load_steps=2 format=3 uid="uid://n36nxwmgaxg1"]

[ext_resource type="Script" uid="uid://bkqtmjbqdvpmh" path="res://Scripts/game_over.gd" id="1_ojehl"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ojehl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DerrotaLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "DERROTA"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reiniciar"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu Inicial"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Desistir"
